# tp_2_PAA

./: .gitignore  README.md  pyproject.toml
project/: a_prova_np_completo.tex  b_algoritmo_linear.py  b_teste_limites.py  c_prog_dinamica.py  d_algoritmo_aproximado.py  g_analise_comparativa.py
